--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="./static/favicon.ico">
     <link rel="manifest" href="./manifest.json">
     <%= htmlWebpackPlugin.options.loading.css %>
-    <title>app-front-end</title>
+    <title>jenkins test</title>
   </head>
   <body>
     <div id="app">
